# paralleltime

./: CMakeLists.txt  paralleltime.cpp  paralleltime.h
